# entropy-chaos

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
entropy/: __init__.py  cli.py  watch.py
entropy/core/: attack_tree.py  auth.py  config.py  models.py  orchestrator.py  parser.py
entropy/discovery/: __init__.py  crawler.py
entropy/fuzzing/: adaptive_analyser.py  baseline.py  differential.py  executor.py  form_fuzzer.py  idor_chain.py  jwt_tester.py  logical.py  param_miner.py  ratelimit.py  smuggling.py  ssrf.py  ssti.py  url_injector.py  xxe.py
entropy/history/: __init__.py
entropy/integrations/: cicd.py
entropy/llm/: backends.py
entropy/personas/: custom.py  engine.py
entropy/proxy/: __init__.py
entropy/reporting/: cvss.py  html_reporter.py  reporter.py  sarif.py
entropy/sandbox/: docker_manager.py
entropy/scenarios/: owasp.py
entropy/schemas/: graphql.py
entropy/web/: __init__.py
entropy/websocket/: __init__.py
examples/: entropy.yml  finance_insider.yaml  shopapi.graphql  shopapi.yaml
tests/: test_entropy.py
